@@ -1104,7 +1104,7 @@ public class WorkQueueManager implements ChannelTermination, FFDCSelfIntrospecta
                 threadName = "Connect Selector";
             }
 
-            Thread t = new Thread(this.group, this.sr);
+            Thread t  = Thread.ofVirtual().unstarted(this.sr);
             t.setName(threadName + "." + this.number);
 
             // all TCPChannel Thread should be daemon threads
